pkl-core/src/test/files/LanguageSnippetTests/input/errors/propertyNotFound2.pkl
res0 = Pair(1, 2).foo
